erDiagram
    usuarios {
        integer id PK
        varchar nome
        varchar email UK
        text password_hash
        jsonb config
        timestamp data_cadastro
        varchar cpf UK
        date data_nascimento
        varchar tipo_sanguineo
        text alergias
        text foto_perfil
    }
    
    enderecos {
        integer id PK
        integer usuario_id FK
        varchar pais
        varchar estado
        varchar cidade
        varchar rua
        varchar numero
        varchar complemento
        varchar cep
    }
    
    classificacoes_humor {
        integer id PK
        integer usuario_id FK
        integer nivel_humor
        varchar sentimento_principal
        text notas
        timestamp data_classificacao
    }
    
    meditacoes {
        integer id PK
        varchar titulo
        text descricao
        integer duracao_minutos
        text url_audio
        varchar tipo
        varchar categoria
        text imagem_capa
    }
    
    historico_meditacoes {
        integer id PK
        integer usuario_id FK
        integer meditacao_id FK
        timestamp data_conclusao
        integer duracao_real_minutos
    }
    
    resultados_avaliacoes {
        integer id PK
        integer usuario_id FK
        tipo_avaliacao tipo
        jsonb respostas
        integer resultado_score
        text resultado_texto
        timestamp data_avaliacao
    }
    
    notificacoes {
        integer id PK
        integer usuario_id FK
        varchar titulo
        text mensagem
        timestamp data_envio
        boolean lida
    }
    
    usuarios ||--o{ enderecos : has
    usuarios ||--o{ classificacoes_humor : has
    usuarios ||--o{ historico_meditacoes : has
    usuarios ||--o{ resultados_avaliacoes : has
    usuarios ||--o{ notificacoes : has
    meditacoes ||--o{ historico_meditacoes : referenced_in
